src/vm/snapshots/hebi__vm__tests__list_indexing_zero_opt.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
?[0, 1, 2][0]


# Result:
Int(
    0,
)
