src/vm/snapshots/hebi__vm__tests__logical_and_expr_return_lhs.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
false && "b"


# Result:
Bool(
    false,
)
