src/vm/snapshots/hebi__vm__tests__logical_and_expr_return_rhs.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
"a" && "b"


# Result:
Ok(
    Object(
        "b",
    ),
)
