src/vm/snapshots/hebi__vm__tests__logical_or_expr_return_lhs.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
"a" || "b"


# Result:
Ok(
    Object(
        "a",
    ),
)
