src/vm/snapshots/hebi__vm__tests__logical_or_expr_return_rhs.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
false || "b"


# Result:
Ok(
    Object(
        "b",
    ),
)
