src/vm/snapshots/hebi__vm__tests__module_fail_to_parse.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
import test


# Result:
Err(
    Syntax(
        SyntaxError {
            errors: [
                SpannedError {
                    span: Span {
                        start: 10,
                        end: 11,
                    },
                    message: "expected `(`",
                },
            ],
        },
    ),
)
