src/vm/snapshots/hebi__vm__tests__module_not_found.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
import test


# Result:
Err(
    Vm(
        SpannedError {
            span: Span {
                start: 0,
                end: 0,
            },
            message: "module `test` not found",
        },
    ),
)
