src/vm/snapshots/hebi__vm__tests__module_vars.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
import test

test.set(50)
test.get()


# Result:
Int(
    50,
)
